[gd_scene load_steps=6 format=2]

[ext_resource path="res://media/ttf/fcr.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://media/tres/dyFonts/terminal.tres" type="DynamicFont" id=2]
[ext_resource path="res://media/tres/stylebox/empty.tres" type="StyleBox" id=3]
[ext_resource path="res://scripts/scenes/screens/title_screen.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
size = 84
font_data = ExtResource( 1 )

[node name="title_screen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bg" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="color" type="ColorRect" parent="bg"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.027451, 0.027451, 0.027451, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="title" type="Label" parent="bg"]
anchor_left = 0.033
anchor_top = 0.059
anchor_right = 0.521
anchor_bottom = 0.156
margin_left = 0.639999
margin_top = 0.279995
margin_right = -0.320068
margin_bottom = -0.480011
custom_fonts/font = SubResource( 1 )
text = "Marked for carnage"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="menu" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="begin" type="Button" parent="menu"]
anchor_left = 0.029
anchor_top = 0.6
anchor_right = 0.2
anchor_bottom = 0.654
margin_left = 0.32
margin_right = -316.0
margin_bottom = -0.320068
mouse_default_cursor_shape = 2
custom_styles/focus = ExtResource( 3 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color_hover = Color( 0, 1, 0, 1 )
flat = true
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="opts" type="Button" parent="menu"]
anchor_left = 0.029
anchor_top = 0.711
anchor_right = 0.2
anchor_bottom = 0.765
margin_left = 0.32
margin_top = 0.119995
margin_right = -316.0
margin_bottom = -0.200073
mouse_default_cursor_shape = 2
custom_styles/focus = ExtResource( 3 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color_hover = Color( 0, 1, 0, 1 )
flat = true
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="quit" type="Button" parent="menu"]
anchor_left = 0.029
anchor_top = 0.822
anchor_right = 0.2
anchor_bottom = 0.876
margin_left = 0.32
margin_top = 0.23999
margin_right = -316.0
margin_bottom = -0.0799561
mouse_default_cursor_shape = 2
custom_styles/focus = ExtResource( 3 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color_hover = Color( 0, 1, 0, 1 )
flat = true
align = 0
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="mouse_entered" from="menu/begin" to="." method="_on_begin_mouse_entered"]
[connection signal="mouse_exited" from="menu/begin" to="." method="_on_begin_mouse_exited"]
[connection signal="pressed" from="menu/begin" to="." method="_on_begin_pressed"]
[connection signal="mouse_entered" from="menu/opts" to="." method="_on_opts_mouse_entered"]
[connection signal="mouse_exited" from="menu/opts" to="." method="_on_opts_mouse_exited"]
[connection signal="pressed" from="menu/opts" to="." method="_on_opts_pressed"]
[connection signal="mouse_entered" from="menu/quit" to="." method="_on_quit_mouse_entered"]
[connection signal="mouse_exited" from="menu/quit" to="." method="_on_quit_mouse_exited"]
[connection signal="pressed" from="menu/quit" to="." method="_on_quit_pressed"]
